# MOKIT

./: .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci_centos7.yml  .gitlab-ci_conda.yml  .gitlab-ci_main.yml  CHANGELOG  CONTRIBUTING.md  MANIFEST.in  README.md  README_zh-CN.md  README_zh.md  fpm.toml  fpm_openblas.toml  mokit-whl.sh  pip-whl.sh  program.info  pyproject.toml  requirements.txt  setup.cfg  setup.py
basis/: DKH-def2-QZVPP  DKH-def2-SVP  DKH-def2-TZVP  ZORA-def2-QZVPP  ZORA-def2-SV(P)  ZORA-def2-SVP  ZORA-def2-TZVP  ZORA-def2-TZVP(-f)  apr-cc-pvqz-jkfit  aug-cc-pv5z-jkfit  aug-cc-pvqz-jkfit  aug-cc-pvtz-jkfit  cc-pv5z-jkfit  cc-pvtz-jkfit  def2-universal-jkfit  jun-cc-pvdz-jkfit  jun-cc-pvqz-jkfit  jun-cc-pvtz-jkfit  ma-DKH-def2-QZVPP  ma-DKH-def2-TZVP  ma-ZORA-def2-SV(P)  ma-ZORA-def2-TZVP  ma-ZORA-def2-TZVP(-f)  mar-cc-pv5z-jkfit  may-cc-pvqz-jkfit  pcSseg-1
conda/: build.sh  conda_build_config.yaml  meta.yaml
conda/cf310p/: build.sh  conda_build_config.yaml  meta.yaml
conda/cf39/: build.sh  conda_build_config.yaml  meta.yaml
conda/conda310p/: build.sh  conda_build_config.yaml
conda/conda37/: build.sh  conda_build_config.yaml  meta.yaml
conda/conda38p/: conda_build_config.yaml
conda/conda39p/: conda_build_config.yaml  meta.yaml
doc/: README.md  cite_MOKIT.bib  cite_MOKIT.enw  cite_MOKIT.ris
examples/: 01-water_cc-pVTZ_6D10F.fch  04-bis.fchk  readme.txt
examples/automr/: 00-N2_cc-pVQZ_6D10F_1.15.gjf  00-h2o_cc-pVDZ_1.5.gjf  01-N2_cc-pVDZ_1.2.gjf  01-N2_cc-pVQZ_6D10F_1.0.gjf  01-N2_cc-pVQZ_6D10F_1.0_rhf.fchk  02-N2_cc-pVDZ_1.0.gjf  02-N2_cc-pVQZ_6D10F_4.0.gjf  03-N2_cc-pVDZ_1.0.gjf  03-N2_cc-pVQZ_6D10F_4.0.gjf  04-N2_cc-pVQZ_6D10F_4.0.gjf  04-N2_cc-pVTZ_4.0.gjf  05-N2_cc-pVQZ_6D10F_4.0.gjf  05-N2_cc-pVTZ_4.0.gjf  06-B3_cc-pVDZ_5D7F.gjf  06-N2_cc-pVQZ_6D10F_4.0.gjf  06-N2_cc-pVTZ_4.0.gjf  07-B3_cc-pVDZ_5D7F.gjf  07-N2_cc-pVTZ_6D10F_charge_uhf.gjf  08-N2_cc-pVTZ_6D10F_charge.gjf  08-N2_cc-pVTZ_6D10F_charge_uhf.gjf  09-N2_cc-pVTZ_6D10F_charge.gjf  09-N2_cc-pVTZ_charge.gjf  09-NO_def2TZVP.gjf  10-NO_def2TZVP.gjf  11-NO_def2TZVP.gjf  12-benzene_cc-pVTZ.gjf  13-h2o_DKH-def2-SVP_1.5.gjf  14-acetone_pcSseg-2.gjf  15-benzene_SA-CAS.gjf  (+11 more)
gitlab-ci/: centos7.yml  conda.yml  main.yml
lib/: gaussian.py  py2bdf.py  py2dalton.py  py2fch_direct.py  py2gms.py  py2molcas.py  py2molpro.py  py2qchem.py
mokit/: __init__.py
src/: .out  Makefile  Makefile.gnu_mkl  Makefile.gnu_mkl_conda  Makefile.gnu_openblas  Makefile.gnu_openblas_arch  Makefile.gnu_openblas_ci  Makefile.gnu_openblas_conda  Makefile.gnu_openblas_macos_brew  Makefile.gnu_openblas_pip  Makefile.intel  Makefile.intel_ifx  Makefile.main  Makefile.rest  Makefile_Win  addH2singlet.f90  add_bgcharge_to_inp.f90  align_orbitals.f90  amo2fch.f90  assoc_loc.f90  assoc_rot.f90  auto_pair.f90  autodft.f90  automl.f90  automr.f90  autosr.f90  bas_fch2py.f90  bas_gau2molcas.f90  bas_gms2bdf.f90  bas_gms2dal.f90  bas_gms2molcas.f90  bas_gms2molpro.f90  bas_gms2psi.f90  bas_gms2py.f90  bdf2fch.f90  bdf2mkl.f90  benzene.gjf  call_qc_calc_int.f90  chk2gbw.f90  chk2py.f90  (+111 more)
test/: test_ecp.py  test_py2fch.py
(+118 files in other folders)
