# Copyright 2020-2025 The MOKIT Developers. All Rights Reserved.
[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
'Development Status :: 5 - Production/Stable',
'Intended Audience :: Science/Research',
'Intended Audience :: Developers',
'License :: OSI Approved :: Apache Software License',
'Programming Language :: Fortran',
'Programming Language :: Python :: 3',
'Topic :: Software Development',
'Topic :: Scientific/Engineering',
'Topic :: Scientific/Engineering :: Chemistry',
'Operating System :: POSIX',
]
name             = 'mokit'
authors = [
          { name = 'Jingxiang Zou', email = 'njumath@sina.cn'},]
description      = 'MOKIT: Molecular Orbital KIT'
license = { text = "Apache-2.0" }
license-files    = ['LICENSE']
keywords         = ['quantum-chemistry', 'computational-chemistry']
version          = "1.2.7rc12"
#dynamic          = ["version"]
requires-python  = ">=3.8"
#dependencies     = [
#        'numpy>=1.21',
#        'mkl>=2022',
#        'libgfortran5'
#]

[project.urls]
Homepage         = 'https://gitlab.com/jxzou/mokit'
Repository       = 'https://gitlab.com/jxzou/mokit'
Documentation    = "https://jeanwsr.gitlab.io/mokit-doc-mdbook"
Issues           = 'https://gitlab.com/jxzou/mokit/-/issues'
Changelog        = 'https://gitlab.com/jxzou/mokit/-/blob/master/CHANGELOG'
#PLATFORMS        = ['Linux']

#[tool.setuptools.packages.find]
#where = ["."]
#include = ["mokit", "mokit.*"]
#
#[tool.setuptools.dynamic]
#version = { attr = "mokit.__version__"}
#readme =  { file = "README.md"}
